# spacefight4ever

./: .env.debug  AGENTS.md  Architecture.md  Cargo.toml  GEMINI.md  Humans.md  Knowledgebase.md  README.md
.agents/: arch.md  code.md  tech-writer.md  test-agent.md  workspace.md
.agents/skills/dev/: dev-agent.md
.agents/skills/developer/: SKILL.md
.agents/skills/senior-dev/: SKILL.md
.agents/skills/tech-docu-writer/: SKILL.md
.agents/skills/test-engineer/: SKILL.md
.cargo/: config.toml
.zed/: debug.json
agents/: arch.md  code.md  dev-agent.md
assets/data/: ammunitions.json  weapons.json
assets/data/modules/: prop_10KN.module.def.ron  prop_1KN.module.def.ron
assets/data/ships/: spitfire.ship.def.ron
assets/shaders/: progress_bar.wgsl  progress_bar_universal.wgsl  progress_bar_uv.wgsl
assets/ships/: Striker.glb
assets/ships/models/: Challenger.glb  Dispatcher.glb  Imperial.glb  Pancake.glb  Spitfire.glb  Zenith.glb
assets/themes/: standard.uitheme.ron
crates/spacefight4ever_ui/: Cargo.toml  Readme.md
crates/spacefight4ever_ui/src/: bundle.rs  component.rs  lib.rs  resource.rs  structs.rs
crates/spacefight4ever_ui/src/ui/: atlasbutton.rs  button.rs  dialog.rs  disktheme.rs  progressbar.rs  progressbar_commands.rs  progressbar_material.rs  radial_progressbar.rs  theme.rs  titlebar.rs  window.rs
crates/spacefight4ever_ui/src/ui/assets/: asseterror.rs  assets.rs  atlasbuttonskin.rs  disktheme.rs  theme.rs  theme_plugin.rs  titlebarskin.rs  windowsskin.rs
crates/spacefight4ever_ui/src/window/: window.rs  window_observers.rs
crates/spacefight4ever_ui/src/window/systems/: button.rs  close.rs  minmax.rs  resize.rs  window_atlas_switch.rs
scripts/: rust-env.sh
spacefight4ever-bin/: Cargo.toml
spacefight4ever-bin/src/: main.rs
spacefight4ever-lib/: Cargo.toml
spacefight4ever-lib/src/: lib.rs
spacefight4ever-lib/src/config/: environment.rs
spacefight4ever-lib/src/game/: assets.rs  mod.rs
spacefight4ever-lib/src/game/combat/: README.md  attack.rs  basetypes.rs  health.rs  health_basetypes.rs  help.rs  missile_system.rs  projectile_system.rs  ships.rs
spacefight4ever-lib/src/game/physics/: collision.rs  raycast_damage.rs
spacefight4ever-lib/src/game/player/: gameassets.rs  gltf_playership.rs  player.rs  playership.rs  ship.rs
spacefight4ever-lib/src/game/ship/: Readme.md  ammunition_definitions.rs  bundle.rs  cargo.rs  module.rs  weapon.rs  weapon_definition.rs
spacefight4ever-lib/src/game/ship/definitions/: ammunition_definition.rs  armor_definition.rs  definition_repository.rs  load_error.rs  module_definition.rs  mountpoint.rs  propulsion_definition.rs  shield_definition.rs  ship_definition.rs  ship_models.rs  support_definitions.rs  weapon_definition.rs
spacefight4ever-lib/src/game/ship/modules/: module.rs  mountpoint.rs  propulsion.rs  stats.rs  stats_dependency_graph.rs
spacefight4ever-lib/src/game/ships/: modules.rs
spacefight4ever-lib/src/plugin/: camera.rs  dialog_plugin.rs  game_plugin.rs  mod.rs  ui_plugin.rs  ui_window_plugin.rs
spacefight4ever-lib/src/ui/: README_architecture.md  bundle.rs  camera.rs  debug.rs  dialog_manager.rs  dialog_stack.rs  layers.rs  messages.rs  mod.rs  movement.rs  movement_intent.rs  state.rs
spacefight4ever-lib/src/ui/dialogs/: confirm_exit.rs  message.rs  ship_equipment.rs
spacefight4ever-lib/src/ui/hud/: health_display.rs  hud_root.rs  movement_display.rs  ship_modul_bar.rs
spacefight4ever-lib/src/ui/input/: keybindings.rs  ship.rs
spacefight4ever-lib/src/ui/overlay/: settings.rs  slider.rs
spacefight4ever-lib/src/ui/systems/: dialog.rs
spacefight4ever-lib/src/ui/widgets/: button.rs
spacefight4ever-lib/src/ui/window/: bundle.rs  component.rs  consts.rs  structs.rs  window.rs  window_ninepatch.rs
spacefight4ever-lib/src/ui/window/systems/: close.rs  drag_system.rs  manager.rs  minmax.rs  resize.rs
spacefight4ever-test/: Cargo.toml  health_system.rs
spacefight4ever-test/src/: lib.rs
spacefight4ever-test/src/game/: mod.rs  ui_dialog.rs
spacefight4ever-test/src/game/combat/: health_damage.rs  health_heal.rs
src/: main.rs
src/game/: mod.rs
src/game/combat/: README.md  health.rs  health_basetypes.rs  ships.rs
src/game/player/: player.rs
src/plugin/: game_plugin.rs  mod.rs  ui_plugin.rs
src/ui/: README.md  bundle.rs  dialog_manager.rs  dialog_stack.rs  layers.rs  messages.rs  mod.rs  root.rs  state.rs
src/ui/dialogs/: confirm_exit.rs  message.rs
src/ui/hud/: health_bar.rs  health_display.rs  hud_root.rs  ship_modul_bar.rs
src/ui/systems/: button.rs  dialog.rs
