[workspace]
resolver = "2"
members = [
    "spacefight4ever-bin",
    "spacefight4ever-lib",
    "spacefight4ever-test"
]

[workspace.dependencies]
bevy = "0.18.0"
bevy_prototype_lyon = "0.16.0"
bevy_ui = "0.18.1"
bevy_ui_widgets = "0.18.1"
serde = "1.0.228"
serde_json = "1.0.149"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.test]
debug = 2
# inherits = "dev"
lto = false
# codegen-units = 1
opt-level = 1

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
# false, thin, fat [fast compile vs. more optimization]
lto = "fat"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
# opt-level = "s" ->  it allows slightly more inlining and also the vectorization of loops
# compared to "z" 
opt-level = "s"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
