[package]
name = "spacefight4ever-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
#spacefight4ever_ui = { path = "../crates/spacefight4ever_ui", features = ["dynamic_linking", "debug"] }
spacefight4ever-lib = { path = "../spacefight4ever-lib", features = [ "dynamic_linking", "debug" ] }

bevy = { workspace = true, features = [ "dynamic_linking", "debug" ] }
bevy_ui_widgets = { workspace = true }
avian3d = { version = "0.6.0", features = ["simd"] }

spacefight4ever_ui = { workspace = true, features = [ "dynamic_linking", "debug" ] }

[features]
default = []
debug = [
    "bevy/debug",
    "spacefight4ever_ui/debug"
]
dynamic_linking = [
    "bevy/dynamic_linking",
    "spacefight4ever_ui/dynamic_linking"
]
