[package]
name = "spacefight4ever-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.6.0", features = [ "simd" ] }
bevy = { workspace = true }
bevy_prototype_lyon = { workspace = true, features = []}
bevy_ui = { workspace = true }
bevy_ui_widgets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
debug = [
    "bevy/debug",
    "avian3d/diagnostic_ui",
]
dynamic_linking = [
    "bevy/dynamic_linking",
]
