[package]
name = "spacefight4ever-test"
version = "0.1.0"
edition = "2021"

[dependencies]
spacefight4ever-lib = { path = "../spacefight4ever-lib" }

bevy = { workspace = true }
bevy_prototype_lyon = { workspace = true }
bevy_ui = { workspace = true }
bevy_ui_widgets = { workspace = true }

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
