[package]
name = "spacefight4ever-test"
version = "0.1.0"
edition = "2024"

[dependencies]
spacefight4ever-lib = { path = "../spacefight4ever-lib", features = [ "debug" ] }

bevy = { workspace = true, features = [ "debug" ] }
bevy_prototype_lyon = { workspace = true, features = [] }
avian3d = { version = "0.6.0", features = ["simd"] }
