[package]
name = "spacefight4ever_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1" }
serde = { workspace = true}
ron = { workspace = true }
thiserror = "2.0.18"
async-trait = { workspace = true }

# If you use custom message types or other shared libs, add them here
# spacefight4ever-lib = { path = "../../spacefight4ever-lib" }

[features]
default = []
debug = [
    "bevy/debug",
]
dynamic_linking = [
    "bevy/dynamic_linking",
]

[profile.dev]
debug = true
opt-level = 2   # Ensure no overly strong optimization
split-debuginfo = 'unpacked'

[profile.release]
debug = true
opt-level = 3   # Keep release optimizations, but debug info can be included
